Project

General

Profile

Actions

Bug #5363

closed

pwd.h has incorrect prototype for getpwnam_r and getpwuid_r

Added by Keith Wesolowski over 8 years ago. Updated over 8 years ago.

Status:
Closed
Priority:
Normal
Category:
lib - userland libraries
Start date:
2014-11-21
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

For unknown reasons, the prototypes under _POSIX_PTHREAD_SEMANTICS in pwd.h use int as the fourth argument. POSIX says this should be size_t. In fact, our declarations of the __posix_xxx functions are correct in this regard. This problem has existed for at least 10 years; its origin is unknown. See http://pubs.opengroup.org/onlinepubs/009695399/functions/getpwnam.html.


Related issues

Related to illumos gate - Bug #5364: grp.h has incorrect prototype for getgrnam_r and getgrgid_rClosedKeith Wesolowski2014-11-21

Actions
Actions #1

Updated by Electric Monk over 8 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 750b79c78c780208c50864106db6ec3fc19a664b

commit  750b79c78c780208c50864106db6ec3fc19a664b
Author: Keith M Wesolowski <wesolows@foobazco.org>
Date:   2014-11-25T16:08:31.000Z

    5363 pwd.h has incorrect prototype for getpwnam_r and getpwuid_r
    Reviewed by: Robert Mustacchi <rm@joyent.com>
    Reviewed by: Andy Stormont <astormont@racktopsystems.com>
    Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com>
    Reviewed by: Dan McDonald <danmcd@nexenta.com>
    Reviewed by: Marcel Telka <marcel@telka.sk>
    Approved by: Richard Lowe <richlowe@richlowe.net>

Actions

Also available in: Atom PDF